# ObiektoweProjekt

./: README.md
Programowanie obiektowe/: Bateria.h  Bramka.h  CMakeLists.txt  Dioda.h  Drukarka.h  KartaGraficzna.h  Komponenty.h  Komputer.h  Kserokopiarka.h  Monitor.h  Odbiornik.h  PlytaGlowna.h  Procesor.h  Producent.h  Przedsiebiorstwo.h  Serwis.h  Smartfon.h  Smartwatch.h  Tablet.h  Telewizor.h  Tranzystor.h  Urzadzenie.h  Wartosci.h  Wyswietlacz.h  Zlacze.h  main.cpp
