cmake_minimum_required(VERSION 3.22)
project(PO_PROJEKT)

set(CMAKE_CXX_STANDARD 17)

add_executable(PO_PROJEKT main.cpp Serwis.h Bateria.h Wyswietlacz.h KartaGraficzna.h Procesor.h PlytaGlowna.h Smartfon.h Smartwatch.h Tablet.h Komputer.h Producent.h Drukarka.h Dioda.h Zlacze.h Tranzystor.h Wartosci.h Bramka.h Kserokopiarka.h Komponenty.h Przedsiebiorstwo.h Urzadzenie.h Telewizor.h Odbiornik.h Monitor.h)
